--- a/SJVisionDemo/Info.plist
+++ b/SJVisionDemo/Info.plist
@@ -41,5 +41,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>SJVisionDemo需要您的同意,才能访问相机</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>SJVisionDemo需要您的同意,才能访问相册</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>SJVisionDemo需要您的同意,才能访问相册</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>SJVisionDemo需要您的同意,才能访问麦克风</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>SJVisionDemo需要您的同意,才能访问媒体资料库</string>
 </dict>
 </plist>
